@@ -1,3 +1,7 @@
+2009-03-11  Gautier Portet <kassoulet gmail com>
+
+	* src/soundconverter.py: Sanitize URI handling.
+	
 2009-03-10  Gautier Portet <kassoulet gmail com>
 
 	* src/soundconverter.py: Display an error dialog
